overflow fix

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,11 +38,6 @@ body {
 	background: white;
 }
 
-.me {
-	height: 100%;
-	min-height: 100vh;
-}
-
 a {
 	outline: none;
 	cursor: pointer;
